--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-zod-api": "^20.14.3",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.1",
     "node-telegram-bot-api": "^0.66.0",
+    "npm": "^11.1.0",
     "pg": "^8.13.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
+    "uuidv4": "^6.2.13",
     "zod": "^3.23.8",
     "zod-to-openapi": "^0.2.1"
   },
@@ -45,6 +48,7 @@
     "@types/node-telegram-bot-api": "^0.64.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
   },
