--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8",
     "zod-to-openapi": "^0.2.1"
   },
@@ -45,6 +46,7 @@
     "@types/node-telegram-bot-api": "^0.64.7",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
   },
