--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
-    "uuidv4": "^6.2.13",
     "zod": "^3.23.8",
     "zod-to-openapi": "^0.2.1"
   },
@@ -50,7 +49,8 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "uuid": "^11.1.0"
   },
   "keywords": [],
   "description": ""
