--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "emitDecoratorMetadata": true,
-    "typeRoots": ["@types"],
+    "typeRoots": ["@types", "./node_modules/@types"],
   },
   "include": ["src"]
 }
